# simledge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  cliff.toml  pyproject.toml
docs/plans/: 2026-03-02-simledge-design.md  2026-03-02-simledge-implementation.md  2026-03-03-tui-polish-design.md  2026-03-03-tui-polish-implementation.md
scripts/: release.sh
src/simledge/: __init__.py  analysis.py  budget.py  cashflow.py  categorize.py  cli.py  colors.py  compat.py  config.py  db.py  export.py  goals.py  log.py  recurring.py  sync.py  tags.py  watchlist.py
src/simledge/tui/: __init__.py  app.py  app.tcss  charts.py  formatting.py
src/simledge/tui/screens/: accounts.py  budget.py  goals.py  networth.py  overview.py  recurring.py  rules.py  transaction_detail.py  transactions.py  trends.py  watchlist.py
src/simledge/tui/widgets/: navbar.py
tests/: test_analysis.py  test_budget.py  test_calendar.py  test_cashflow.py  test_categorize.py  test_charts.py  test_colors.py  test_config.py  test_db.py  test_export.py  test_formatting.py  test_goals.py  test_recurring.py  test_sync.py  test_tags.py  test_watchlist.py
