[project]
name = "simledge"
version = "0.1.0"
description = "Personal finance TUI — SimpleFIN sync, SQLite storage, interactive dashboards"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ahacad", email = "ahacadev@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "plotext>=5.3",
]

[project.scripts]
simledge = "simledge.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
