[project]
name = "simledge"
version = "0.2.1"
description = "Personal finance TUI — SimpleFIN sync, SQLite storage, interactive dashboards"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ahacad", email = "ahacadev@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "plotext>=5.2",
]

[project.scripts]
simledge = "simledge.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["simledge"]
